--- a/assets/css/landingStyle.css
+++ b/assets/css/landingStyle.css
@@ -1,21 +1,28 @@
+
+* body{
+  background-image: url(../images/135.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 main {
   margin-top: 20px;
   margin-bottom: 45px;
+  background-color: none;
+
 }
 
 .hero-banner {
-  background: rgb(68, 88, 120);
-  background-image: url("../images/strong-lady.jpg");
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: soft-light;
-  height: 30vh;
-  color: var(--light);
+
+  height: 20vh;
+  background-color: none;
+  color: none;
   padding: 2% 6%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  text-align: right;
+  justify-content: flex;
+  align-items: flex;
+  text-align: left;
 }
 
 .hero-banner div {
@@ -23,8 +30,8 @@ main {
 }
 
 .hero-banner h2 {
-  background-color: var(--secondary);
-  color: var(--tertiary);
+  background-color:none;
+  color: black;
   margin: 0;
   padding: 5px 10px;
   font-size: 2.3rem;
@@ -45,7 +52,7 @@ main {
   float: left;
   width: 20%;
   height: 100%;
-  background-color: #2589bd;
+  background-color: none;
 }
 
 .page-section {
@@ -62,7 +69,7 @@ main {
   flex: 0 0 20%;
   text-align: right;
   padding-right: 15px;
-  border-right: 4px solid var(--primary);
+  border-right: 4px;
   font-size: 4vw;
   line-height: 1.1;
 }
@@ -105,7 +112,7 @@ main {
 }
 
 .flex-item:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #fff(0, 0, 0, 0.3);
 }
 
 .flex-item div {
@@ -147,7 +154,7 @@ main {
 } */
 
 #personal-info {
-  background-image:  url("../images/personal-info.jpg");
+  background-image:  none;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -155,7 +162,7 @@ main {
 }
 
 #personal-goals {
-  background-image: url("../images/personal-goals.jpg");
+  background-image: none;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
