--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+
 }
 
 html {
@@ -12,6 +12,7 @@ body {
   min-height: 100%;
   line-height: 1;
   font-family: sans-serif;
+  background-image: url(135.jpg);
 }
 
 h1, h2, h3, h4, h5, h6 {
