--- a/assets/css/basicStyle.css
+++ b/assets/css/basicStyle.css
@@ -5,7 +5,7 @@
 /* brand color palette */
 :root {
   --primary: rgba(68, 88, 119, 1);
-  --secondary: rgba(146, 204, 206, 1);
+  --secondary: hsl(0, 86%, 34%);
   --tertiary: rgba(49, 52, 61, 1);
   --dark: rgba(28, 29, 33, 1);
   --light: rgba(238, 238, 247, 1);
@@ -40,13 +40,13 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  background-color: var(--tertiary);
-  box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+  background-color: none;
+  box-shadow: none;
 }
 
 header h1 {
-  color: var(--tertiary);
-  background-color: var(--secondary);
+  color: beige;
+  background-color: var(--dark);
   padding: 5px 1% 5px 6%;
   margin: 0;
   font-size: 4vw;
@@ -62,7 +62,7 @@ nav {
 nav a {
   text-decoration: none;
   padding: 5px 10px;
-  color: var(--secondary);
+  color: var(--dark);
   margin-right: 10px;
   background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
   background-repeat: no-repeat;
@@ -74,7 +74,7 @@ nav a {
 
 nav a:hover {
   background-size: 100% 100%;
-  color: var(--primary);
+  color: beige;
 }
 
 nav a:last-child {
