--- a/assets/css/landingStyle.css
+++ b/assets/css/landingStyle.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  background-size: 99%;
 }
 
 main {
@@ -27,11 +28,12 @@ main {
 
 .hero-banner div {
   flex: 0 0 90%;
+  
 }
 
 .hero-banner h2 {
   background-color:none;
-  color: black;
+  color: rgb(9, 9, 9);
   margin: 0;
   padding: 5px 10px;
   font-size: 2.3rem;
@@ -52,7 +54,8 @@ main {
   float: left;
   width: 20%;
   height: 100%;
-  background-color: none;
+  background-color: beige;
+  color: black;
 }
 
 .page-section {
@@ -68,9 +71,9 @@ main {
 .page-section > h2 {
   flex: 0 0 20%;
   text-align: right;
-  padding-right: 15px;
+  padding-right: 20px;
   border-right: 4px;
-  font-size: 4vw;
+  font-size: 2vw;
   line-height: 1.1;
 }
 
@@ -80,14 +83,15 @@ main {
 }
 
 .page-section p {
-  margin-bottom: 20px;
- background-color: #fff;
+  margin-bottom: 0%;
+  background-color: beige;
 } */
 
 .flex-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 .flex-item {
@@ -114,7 +118,7 @@ main {
 }
 
 .flex-item:hover {
-  background-color: #fff(0, 0, 0, 0.3);
+  background-color: #fff(0 0 0 3);
 }
 
 .flex-item div {
