--- a/assets/css/landingStyle.css
+++ b/assets/css/landingStyle.css
@@ -49,10 +49,10 @@ main {
 
 .intro {
   margin-right: 20px;
-  padding: 40px;
+  padding: 20px;
   clear: both;
   float: left;
-  width: 20%;
+  width: 40%;
   height: 100%;
   background-color: beige;
   color: black;
@@ -122,7 +122,7 @@ main {
 }
 
 .flex-item div {
-  background-color: none;
+  background-color: beige;
   padding: 8px 10px;
 }
 
@@ -175,11 +175,20 @@ main {
   position: relative;  
 }
 
+@media screen and (max-width:880px) {
+  header, div, main
+  footer{
+    flex-direction: column;
+  }
+  
+}
+
 @media screen and (max-width: 980px) {
   header {
     padding: 0 0 10px 0;
     justify-content: center;
     text-align: center;
+    background-color: beige;
   }
 
   header h1 {
@@ -213,3 +222,4 @@ main {
     min-height: 400px;
     }
 }
+
