--- a/assets/css/weekStyle.css
+++ b/assets/css/weekStyle.css
@@ -46,6 +46,20 @@ p
   border-color: #285e8e; /*set the color you want here*/
 }
 
+.image {
+  position: relative;
+}
+  
+.image:hover:after {
+  position: absolute;
+  content: attr(title);
+  display: inline-block;
+  left: 0px;
+  top: 0px;
+  padding: 5px;
+  background-color: black;
+  color: white;
+}
 
 /* Ids */
 #border{
