--- a/assets/css/weekStyle.css
+++ b/assets/css/weekStyle.css
@@ -148,6 +148,9 @@ p
   background-color: var(--enabledSectionColor);
   border-radius: 0px 0px 17px 17px;
 }
+#cardioInput{
+  background-color: white;
+}
 #complete{
   padding-top: 10px;
   margin-bottom: 10px;
