--- a/assets/css/weekStyle.css
+++ b/assets/css/weekStyle.css
@@ -63,6 +63,11 @@ p
   color: white;
 }
 
+.custom-tooltip {
+  --bs-tooltip-bg: var(--bd-violet-bg);
+  --bs-tooltip-color: var(--bs-white);
+}
+
 /* Ids */
 #border{
   border: solid;
