--- a/assets/css/weekStyle.css
+++ b/assets/css/weekStyle.css
@@ -184,3 +184,39 @@ p
   background-color: transparent;
 }
 
+/* Tooltips */
+
+.tooltiptext {
+  visibility: hidden;
+  background-color: black;
+  border: solid;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 3px;
+  font-size: 10px;
+  
+  width: 120px;
+  height: fit-content;
+  
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 30px;
+  left: 105%;
+}
+
+.btn:hover .tooltiptext {
+  animation: 1s fadeIn;
+  animation-fill-mode: forwards;
+  /* visibility: visible; */
+}
+
+@keyframes fadeIn {
+  99% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
