--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -13,10 +13,17 @@ body {
   line-height: 1;
   font-family: sans-serif;
   background-image: url("../images/135.jpg");
+  
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
+}
+.container-fluid {
+  color: var(--dark);
+  text-shadow: 5px 5px 5px rgb(118, 96, 68);
+  text-align: center;
+  text-shadow: 2px 2px 2px var(--secondary);
 }
 
 input, select, option, optgroup, textarea, button,
@@ -28,3 +35,4 @@ pre, code {
 ol, ul {
   list-style: none;
 }
+
