--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,15 @@
+:root{
+  --enabledButtonColor: rgb(113, 104, 90);
+  --enabledTextColor: rgb(28, 20, 8);
+  --buttonHoverColor: rgb(103, 78, 78);
+  --disabledButtonColor: rgb(151, 122, 83);
+  --disabledTextColor: rgb(68, 67, 66);
+  --enabledSectionColor: blanchedalmond;
+  --disabledSectionColor: rgb(240, 229, 215);
+  --textOnLightBackground: rgb(201, 159, 103);  
+  --textOnDarkBackground: rgb(118, 96);
+  --navBarColor: rgb(106, 63, 63);
+}
 
 * body{
   background-image: url(../images/135.jpg);
@@ -16,7 +28,6 @@ main {
 }
 
 .hero-banner {
-
   height: 20vh;
   background-color: none;
   color: none;
@@ -29,11 +40,10 @@ main {
 
 .hero-banner div {
   flex: 0 0 90%;
-  
 }
 
 .hero-banner h2 {
-  background-color:none;
+  background-color: var(--enabledSectionColor);
   color: rgb(9, 9, 9);
   margin: 0;
   padding: 10px 10px;
@@ -68,6 +78,7 @@ main {
   margin: 0;
   box-shadow: 2px 2px 2px 2px var(--secondary);
 }
+
 .page-section {
   margin: 25px 0;
   padding: 20px 0;
@@ -89,7 +100,6 @@ main {
 
 .page-section > div {
   flex: 0 0 77%; 
-  
 }
 
 .page-section p {
@@ -140,34 +150,6 @@ main {
   font-size: 1.6rem;
 }
 
-/* #contact address {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-} */
-
-/* #contact address a {
-  color: var(--tertiary);
-  padding: 5px;
-  text-decoration: none;
-  font-size: 1.3rem;
-  font-style: normal;
-  background-image: linear-gradient(270deg, var(--primary) 0%, var(--primary) 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.2em;
-  background-position: bottom;
-  transition: all 0.25s ease-in;
-  margin: 0 0.2rem 0.1rem;
-  display: inline-block;
-} */
-
-/* 
-#contact address a:hover {
-  background-size: 100% 88%;
-  color: var(--secondary);
-} */
 
 #personal-info {
   background-image:  none;
