--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -12,7 +12,7 @@ body {
   min-height: 100%;
   line-height: 1;
   font-family: sans-serif;
-  background-image: url("../images/135.jpg");
+  /* background-image: url("../images/135.jpg"); */
   
 }
 
